--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 					<div class="overflow-hidden">
 						<h4>Dirección</h4>
 						<p class="lead">
-							SJL, Lima, 508
+							Jr. Francisco Vidal del Laos N°110, El trebol , San Luis
 						</p>
 					</div>
 				</div>
