--- a/gorgojos.html
+++ b/gorgojos.html
@@ -77,7 +77,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5" style="margin-top: 120px;margin-left: 10px;">
-					<img src="imagen/insectos/gorgojos.png" alt="" width="400">
+					<img src="imagen/iconos/gor.png" alt="" width="400">
 				</div>
 				
 				<div class="col-lg-6">
@@ -88,7 +88,7 @@
 								
 								<h1>Gorgojo</h1>
 							  <button class="d-flex align-items-center justify-content-between btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-								DESCRIPCIÓN
+								ASPECTOS
 								<span class="fa-stack fa-sm">
 									<i class="fa fa-plus" aria-hidden="true"></i>
 								</span>
@@ -97,16 +97,19 @@
 						  </div>
 						  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 							<div class="card-body">
-							  <p>Los mamíferos son un grupo muy diverso de animales de unas 5.500 especies, entre las cuales nos encontramos nosotros, los humanos. La característica principal del grupo es que presentan glándulas mamarias, con las que alimentan a sus crías. Son homeotermos, es decir, de sangre caliente.
-								Los mamíferos que suelen constituir las peores plagas son los roedores, en concreto los ratones, las ratas o los conejos.</p>
-							</div>
+								Esta familia posee unas 40000 especies distintas de escarabajos de distintos tamaños (1.5-35 mm), 
+								colores y estructuras. Una característica distintiva de estos insectos es que todos los individuos adultos 
+								presentan un aparato de tipo masticador en el extremo de una larga probóscide. Son animales estrictamente 
+								fitófagos, es decir, solamente se alimentande materia vegetal, viva o muerta. 
+								 Además, suelen tener el cuerpo recubierto de escamas o pelos y la mayoría son voladores.
+							 </div>
 						  </div>
 						</div>
 						<div class="card">
 						  <div class="card-header" id="headingTwo">
 							<h2 class="mb-0">
 							  <button class="d-flex align-items-center justify-content-between btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								CARACTERISTICAS
+								HABITAT
 								<span class="fa-stack fa-2x">
 									<i class="fa fa-plus" aria-hidden="true"></i>
 								</span>
@@ -115,14 +118,10 @@
 						  </div>
 						  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
 							<div class="card-body">
-							  <ul>
-								<li>Hemos colonizado todos los medios posibles, desde el terrestre hasta el acuático en el caso de los delfines, además del aéreo en el caso de los murciélagos.</li>
-								<li>La alimentación de los mamíferos es muy variada, pero en el caso de los mamíferos de pequeño tamaño que nos interesan como plaga, estos suelen ser herbívoros, insectívoros u omnívoros.</li>
-								<li>Greek</li>
-								<li>Biostatistics</li>
-								<li>English</li>
-								<li>Nursing</li>
-							  </ul>
+								El gorgojo del trigo se suele desarrollar en almacenes de cereales. Los gorgojos son insectos 
+								importantes a la hora de dañar los productos almacenados en los establecimientos agrícolas. 
+								Se les considera a menudo como dañinos primarios de los cereales ya que son capaces de 
+								infestar granos sin dañar. Atacan también a los productos cerealeros duros como las pastas, macarrones y espaguetis.
 							</div>
 						  </div>
 						</div>
@@ -130,7 +129,7 @@
 						  <div class="card-header" id="headingThree">
 							<h2 class="mb-0">
 							  <button class="d-flex align-items-center justify-content-between btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-								Research
+								ALIMENTACIÓN
 								<span class="fa-stack fa-2x">
 									<i class="fa fa-plus" aria-hidden="true"></i>
 								</span>
@@ -139,12 +138,7 @@
 						  </div>
 						  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
 							<div class="card-body">
-							  <ul>
-								<li>Astrophysics</li>
-								<li>Informatics</li>
-								<li>Criminology</li>
-								<li>Economics</li>
-							  </ul>
+								Atacan principalmente granos enteros, tales como, trigo, maíz, cebada y arroz.
 							</div>
 						  </div>
 						</div>
@@ -184,7 +178,7 @@
 					<div class="overflow-hidden">
 						<h4>Dirección</h4>
 						<p class="lead">
-							SJL, Lima, 508
+							Jr. Francisco Vidal del Laos N°110, El trebol , San Luis
 						</p>
 					</div>
 				</div>
