--- a/aranas.html
+++ b/aranas.html
@@ -146,14 +146,14 @@
 	
 	<!-- Start Contact info -->
 	<div class="contact-imfo-box">
-		<div class="container">
+		<div class="container" >
 			<div class="row">
 				<div class="col-md-4 arrow-right">
 					<i class="fa fa-volume-control-phone"></i>
 					<div class="overflow-hidden">
-						<h4>Phone</h4>
+						<h4>Telefono</h4>
 						<p class="lead">
-							+01 123-456-4590
+							960 793 985
 						</p>
 					</div>
 				</div>
@@ -162,16 +162,16 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							yourmail@gmail.com
+							elizabethcaver@hotmail.com
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<i class="fa fa-map-marker"></i>
 					<div class="overflow-hidden">
-						<h4>Location</h4>
+						<h4>Dirección</h4>
 						<p class="lead">
-							800, Lorem Street, US
+							Jr. Francisco Vidal del Laos N°110, El trebol , San Luis
 						</p>
 					</div>
 				</div>
@@ -226,7 +226,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Infomacion de Contactos</h3>
-					<p class="lead">Ipsum Street, Lorem Tower, SJL, Lima, 508</p>
+					<p class="lead">Jr. Francisco Vidal del Laos N°110, El trebol , San Luis</p>
 					<p class="lead"><a href="#">960 793 985</a></p>
 					<p><a href="#"> elizabethcaver@hotmail.com</a></p>
 				</div>
