--- a/rastreros.html
+++ b/rastreros.html
@@ -178,7 +178,7 @@
 					<div class="overflow-hidden">
 						<h4>Dirección</h4>
 						<p class="lead">
-							SJL, Lima, 508
+							Jr. Francisco Vidal del Laos N°110, El trebol , San Luis
 						</p>
 					</div>
 				</div>
@@ -233,7 +233,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<h3>Infomacion de Contactos</h3>
-					<p class="lead">Ipsum Street, Lorem Tower, SJL, Lima, 508</p>
+					<p class="lead">Jr. Francisco Vidal del Laos N°110, El trebol , San Luis</p>
 					<p class="lead"><a href="#">960 793 985</a></p>
 					<p><a href="#"> elizabethcaver@hotmail.com</a></p>
 				</div>
